data/derived/comb/progs/unify/prog0320.ml.out
Characters 90-92:
  | Sine e' -> sin(pi *. (eval (e'(e', x, y))))
                                ^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
